# k2_dashboard

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
k2_oai/: __init__.py  experimental_metrics.py  obstacle_detection.py
k2_oai/dashboard/: utils.py
k2_oai/dashboard/pages/: _obstacle_detection.py
k2_oai/dashboard/utils/: _data_loader.py
k2_oai/data/: load.py
k2_oai/obstacle_detection/: metrics.py
k2_oai/utils/: _image_manipulation.py  images.py
src/: main.py
src/k2_oai/dashboard/: app.py
src/k2_oai/dashboard/components/: sidebar.py
src/k2_oai/dashboard/pages/: _obstacle_annotator.py  _obstacle_detection.py
src/k2_oai/dashboard/utils/: _common.py  _data_loader.py
src/k2_oai/data/: load.py
src/k2_oai/obstacle_detection/: __init__.py  metrics.py  pipelines.py  steps.py  utils.py
src/k2_oai/utils/: __init__.py  images.py
