[tool.poetry]
name = "k2_oai"
version = "0.1.0"
description = ""
authors = ["OccupyAI"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python-headless = "==4.5.5.64"
pandas = "^1.4.2"
numpy = "^1.22.4"
python-dotenv = "^0.20.0"
dropbox = "^11.32.0"
streamlit = {version = "^1.9.2", optional = true}
python-multipart = {version = "^0.0.5", optional = true}
watchdog = {version = "^2.1.9", optional = true}
fastapi = {version = "^0.78.0", optional = true}
geopandas = {version = "^0.11.0", optional = true}
osmnx = {version = "^1.2.1", optional = true}

[tool.poetry.extras]
all = ["streamlit", "python-multipart", "watchdog", "fastapi", "geopandas", "osmnx"]
dashboard = ["streamlit", "python-multipart", "watchdog"]
api = ["fastapi", "python-multipart"]
geo = ["geopandas", "osmnx"]

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pre-commit = "^2.19.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
